--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "pre-commit>=3.5.0",
+    "pysimplegui>=4.60.5",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
