--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "pre-commit>=3.5.0",
     "pysimplegui>=4.60.5",
+    "pyperclip>=1.8.2",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
