--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pre-commit>=3.5.0",
     "pysimplegui>=4.60.5",
     "pyperclip>=1.8.2",
+    "mypy>=1.6.1",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
